added navigation component, fixed edit text ui bug, added the project to  firebase

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,9 @@
     <string name="mobile_number_or_email">Mobile Number or Email</string>
     <string name="forgot_password">Forgot Password?</string>
     <string name="or">Or</string>
+    <string name="first_name">First Name</string>
+    <string name="last_name">Last Name</string>
+    <string name="email_address">Email Address</string>
+    <string name="phone_number">Phone Number</string>
+    <string name="already_have_an_account">Already have an account?</string>
 </resources>
